vest-dsl/test/bad/choice_arrays_variant_invalid_len.vest
array = [u8; 4]
fmt(@len: u8, @tag: array) = choose(@tag) {
  [0, 0, 0, 1, 1] => [u8; @len],
  [1, 0, 0, 1] => u32,
  [2, 0, 0, 1] => u32,
}
